started working on chapter 3

--- a/biblio.bib
+++ b/biblio.bib
@@ -260,3 +260,80 @@ journal = {IEEE Spectrum},
 issn = {0018-9235},
 publisher = {Institute of Electrical and Electronics Engineers Inc.}
 }
+
+@misc{faiz2024llmcarbon,
+      title={LLMCarbon: Modeling the end-to-end Carbon Footprint of Large Language Models}, 
+      author={Ahmad Faiz and Sotaro Kaneda and Ruhan Wang and Rita Osi and Prateek Sharma and Fan Chen and Lei Jiang},
+      year={2024},
+      eprint={2309.14393},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2309.14393}, 
+}
+
+@software{courty2024codecarbon,
+  author       = {Benoit Courty and
+                  Victor Schmidt and
+                  Sasha Luccioni and
+                  Goyal Kamal and
+                  Marion Coutarel and
+                  Boris Feld and
+                  Jérémy Lecourt and
+                  Liam Connell and
+                  Amine Saboni and
+                  Inimaz and
+                  Supatomic and
+                  Mathilde Léval and
+                  Luis Blanche and
+                  Alexis Cruveiller and
+                  Oumina Sara and
+                  Franklin Zhao and
+                  Aditya Joshi and
+                  Alexis Bogroff and
+                  Hugues de Lavoreille and
+                  Niko Laskaris and
+                  Edoardo Abati and
+                  Douglas Blank and
+                  Ziyao Wang and
+                  Armin Catovic and
+                  Marc Alencon and
+                  Michał Stęchły and
+                  Christian Bauer and
+                  Lucas Otávio N. de Araújo and
+                  JPW and
+                  Minerva Books},
+  title        = {mlco2/codecarbon: v2.4.1},
+  year         = {2024},
+  publisher    = {Zenodo},
+  version      = {v2.4.1},
+  doi          = {10.5281/zenodo.11171501},
+  url          = {https://doi.org/10.5281/zenodo.11171501}
+}
+
+@inproceedings{bannour-etal-2021-evaluating,
+  title        = {Evaluating the Carbon Footprint of NLP Methods: A Survey and Analysis of Existing Tools},
+  author       = {Nesrine Bannour and 
+                  Sahar Ghannay and 
+                  Aur{\'e}lie N{\'e}v{\'e}ol and 
+                  Anne-Laure Ligozat},
+  booktitle    = {Proceedings of the Second Workshop on Simple and Efficient Natural Language Processing},
+  year         = {2021},
+  address      = {Virtual},
+  publisher    = {Association for Computational Linguistics},
+  url          = {https://aclanthology.org/2021.sustainlp-1.2/},
+  doi          = {10.18653/v1/2021.sustainlp-1.2},
+  pages        = {11--21}
+}
+
+@article{lacoste2019quantifying,
+  title        = {Quantifying the Carbon Emissions of Machine Learning},
+  author       = {Alexandre Lacoste and 
+                  Alexandra Luccioni and 
+                  Victor Schmidt and 
+                  Thomas Dandres},
+  journal      = {arXiv preprint},
+  archivePrefix = {arXiv},
+  eprint       = {1910.09700},
+  year         = {2019},
+  url          = {https://arxiv.org/abs/1910.09700}
+}
