--- a/biblio.bib
+++ b/biblio.bib
@@ -337,3 +337,25 @@ publisher = {Institute of Electrical and Electronics Engineers Inc.}
   year         = {2019},
   url          = {https://arxiv.org/abs/1910.09700}
 }
+
+@misc{ember2024carbonintensity,
+  author       = {Ember and Energy Institute and Our World in Data},
+  year         = {2024},
+  title        = {Carbon Intensity of Electricity Generation – Ember and Energy Institute},
+  howpublished = {Dataset},
+  publisher    = {Ember, Energy Institute, and Our World in Data},
+  note         = {Major processing by Our World in Data. Based on Ember's "Yearly Electricity Data" and Energy Institute's "Statistical Review of World Energy".},
+  url          = {https://ourworldindata.org/grapher/carbon-intensity-electricity},
+  urldate      = {2025-03-06}
+}
+
+@ARTICLE{Jensen2023Maxflow,
+  author={Jensen, Patrick M. and Jeppesen, Niels and Dahl, Anders B. and Dahl, Vedrana A.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Review of Serial and Parallel Min-Cut/Max-Flow Algorithms for Computer Vision}, 
+  year={2023},
+  volume={45},
+  number={2},
+  pages={2310-2329},
+  keywords={Computer vision;Parallel algorithms;Benchmark testing;Image segmentation;Sun;Partitioning algorithms;Heuristic algorithms;Algorithms;computer vision;graph algorithms;graph-theoretic methods;parallel algorithms;performance evaluation of algorithms and systems},
+  doi={10.1109/TPAMI.2022.3170096}}
