--- a/main.tex
+++ b/main.tex
@@ -309,8 +309,8 @@ three algorithms:
 \end{itemize}
 
 Accoring to Jensen et al. there are different families of Min-Cut/Max-Flow algorithms. BK belongs to the so called Augmenting Paths (AP)
-family, which is the oldest one, introduced with the Ford-Fulkerson Algorithm \cite{}. Instead, EIBFS and HPF are from the family of the so 
-called \textit{Pseudoflow} algorithms \cite{}. The main differences are the order in which they scan through nodes when looking for an arc 
+family, which is the oldest one, introduced with the Ford-Fulkerson Algorithm [insert citation]. Instead, EIBFS and HPF are from the family of the so 
+called \textit{Pseudoflow} algorithms [insert citation]. The main differences are the order in which they scan through nodes when looking for an arc 
 connecting two trees in the forest, and how they push flow along the paths.
 
 Differently from ANTICIPATE and CONTINGENCY, these algorithms does not have a configuration parameter. Since these three algorithms can 
@@ -353,13 +353,25 @@ when changing the machine on which the algorithm is executed:
 
 Experiments were conducted on:
 \begin{itemize}
-\item A Laptop with [Insert specs](\verb|mbp19|);
-\item A PC with [Insert specs] (\verb|PC|);
-\item An HPC infrastructure, i.e. Leonardo [insert specs] hosted by CINECA (\verb|leonardo|).
+\item \verb|mbp19|: A Laptopr running MacOS Ventura 13.6.7 with:
+    \begin{itemize}
+        \item 1,4 GHz Quad-Core Intel Core i5;
+        \item 8 GB 2133 MHz LPDDR3;
+    \end{itemize};
+\item \verb|PC|: An PC with 
+\item \verb|leonardo| An HPC infrastructure, i.e. Leonardo hosted by CINECA. It has a total of 4992 computing nodes organized in two partitions, the Booster partition and the Data Centric General Purpose (DCGP) partition. For running the benchmark phase we used the booster partition, which has the following specifics:
+    \begin{itemize}
+        \item 8×64 GB DDR4 3200 MHz (512 GB)
+        \item single socket 32-core Intel Xeon Platinum 8358 CPU, 2.60GHz (Ice Lake) (110592 cores).
+        \item 4x NVIDIA custom Ampere A100 GPU 64GB HBM2e, NVLink 3.0 (200GB/s)
+    \end{itemize}
 \end{itemize}
 
-ANTICIPATE and CONTINGENCY were executed on 30 instances with hyperparameter values ranging from 1 to 100, 
-generating datasets with 6,000 records per algorithm per hardware platform. 
+ANTICIPATE and CONTINGENCY were executed on 30 instances which were sampled with a statistical model with a Gaussian distribution \cite{DEFILIPPO2022109199}.
+On each instance, each algorithm was executed with parameter (i.e. number of traces or scenarios) values ranging from 1 to 100. For ANTICIPATE and CONTINGENCY we
+used only \verb|mbp19| and \verb|leonardo|. Thus in the end we obtained a dataset with a total of $30 \times 100 \times 2 \times 2 = 12,000$ entries.
+
+Here we can see some results given by the HADA framework tested on the updated dataset
 
 
 
